Prevent keyboard navigation on mobile menu links when closed

--- a/client/src/app/header/header.component.scss
+++ b/client/src/app/header/header.component.scss
@@ -85,6 +85,12 @@
   @include app.media-breakpoint-down(md) {
     &__burger {
       z-index: 99;
+
+      // Note: in the HTML markup, the "burger" is positioned just between the "logo" and the "menu links".
+      // This makes keyboard navigation (almost) natural (focusing on "menu links" just after focusing the "burger").
+      // The only drawback is on mobile, where the "logo" will be the first to receive focus (even before the "burger").
+      // But in the end, it's not a big deal, because keyboard navigation on mobile remains a marginal use case.
+      order: -1;
     }
 
     &__burger,
@@ -114,13 +120,18 @@
         left 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
         box-shadow 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 
-      &--visible {
+      &--open {
         left: 0px;
         // The following shadow is a copy/past from "Material menu" (to match the `signOutMenu`)
         box-shadow:
           0px 5px 5px -3px rgba(0, 0, 0, 0.2),
           0px 8px 10px 1px rgba(0, 0, 0, 0.14),
           0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+      }
+
+      &--content-hidden > * {
+        // This is the easiest way to prevent keyboard navigation on hidden elements.
+        display: none;
       }
 
       &-backdrop {
